--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.1",
     "@tailwindcss/vite": "^4.0.6",
+    "antd": "^5.24.1",
     "framer-motion": "^12.4.5",
     "gsap": "^3.12.7",
     "react": "^19.0.0",
@@ -19,7 +20,9 @@
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.2.0",
-    "react-router-dom": "^7.2.0"
+    "react-router-dom": "^7.2.0",
+    "react-toastify": "^11.0.3",
+    "sweetalert2": "^11.17.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
