--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-redux": "^9.2.0",
     "react-router": "^7.2.0",
     "react-router-dom": "^7.2.0",
+    "react-spinners": "^0.15.0",
     "react-toastify": "^11.0.3",
     "sweetalert2": "^11.17.2"
   },
