--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@stripe/stripe-js": "^5.7.0",
     "@tailwindcss/vite": "^4.0.6",
     "antd": "^5.24.1",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^12.4.5",
     "gsap": "^3.12.7",
     "leaflet": "^1.9.4",
