--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@stripe/stripe-js": "^5.7.0",
     "@tailwindcss/vite": "^4.0.6",
     "antd": "^5.26.2",
+    "chart.js": "^4.5.0",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^12.4.5",
     "gsap": "^3.12.7",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.525.0",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.4.0",
@@ -33,6 +35,7 @@
     "react-router-dom": "^7.2.0",
     "react-spinners": "^0.15.0",
     "react-toastify": "^11.0.3",
+    "recharts": "^3.0.2",
     "sweetalert2": "^11.17.2"
   },
   "devDependencies": {
